# email-classification-pipeline

./: .gitignore  ADDITIONAL_IMPROVEMENTS.md  CLAUDE.md  CLAUDE_PHASE2.md  CONSOLIDATION_FIXES.md  IMPROVEMENTS_SUMMARY.md  INDICATOR_DISTINCTIVENESS_IMPLEMENTATION.md  PIPELINE_README.md  README.md  REAL_EMAIL_EXAMPLES_IMPLEMENTATION.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  analyze_clusters_llm.py  anonymize_emails.py  anonymize_master_emails.py  chatGTP_suggestions.md  clean_emails.py  cluster_analyses_llm.json  cluster_analysis_summary.json  cluster_emails.py  cluster_results.json  detect_pii.py  documentation.md  email_metadata.json  embedding_config.json  embeddings_config.json  generate_embeddings.py  generate_embeddings_threaded.py  incoming_email_embeddings.npy  incoming_email_metadata.json  kill_pipelines.sh  pipeline_config_template.yaml  pyproject.toml  run_clustering_analysis.py  run_pipeline.py  sample_collection_notes.json  taxonomy.yaml  taxonomy_draft.json  taxonomy_labeling_guide.md  test_content_validation.py  (+14 more)
artifacts/: README.md
config/: README.md  pipeline_config_template.yaml
docs/: README.md
docs/implementation/: phase_2_3_summary.md  process_management.md
docs/planning/: todo.md
pipeline/: __init__.py  analyzer.py  anonymizer.py  clusterer.py  config.py  curator.py  data_processor.py  embedder.py  granular_config.yaml  pipeline.py  prompt_generator.py  sentiment_analyzer.py
scripts/: README.md  pipeline_monitor.py  run_pipeline.py
tests/: README.md  __init__.py  test_validation_improvements.py
(+49 files in other folders)
