[project]
name = "scg-ai-collection-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.6",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "umap-learn>=0.5.9.post2",
]
