[project]
name = "scg-ai-collection-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "openai>=1.108.0",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
